# Elastos.CarrierClassic.Native

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COMMANDS.md  README.md
.circleci/: config.yml
.github/workflows/: ccpp.yml
apps/: CMakeLists.txt
apps/errstr/: CMakeLists.txt  elaerr.c
apps/feeds/: CMakeLists.txt  carrier_config.c  carrier_config.h  carrier_transport.c  carrier_transport.h  config.c  config.h  db.c  db.h  error_code.c  error_code.h  feeds.conf  jsonrpc.c  jsonrpc.h  mkdirs.c  mkdirs.h  service_feeds.c
apps/feeds/feeds_client/: feeds_cli.c  feeds_client.c  feeds_client.h
apps/file/: CMakeLists.txt  filetrans.c
apps/fileonce/: CMakeLists.txt  fileonce.c
apps/maxfriends/: CMakeLists.txt  maxfr.c  maxfr.conf  maxfrd.c  maxfrd.conf
apps/pfd/: CMakeLists.txt  Makefile  config.c  config.h  pfd.c
apps/shell/: CMakeLists.txt  Makefile  config.c  elashell.conf  shell.c
apps/speedtest/: CMakeLists.txt  speedtest.c
cmake/: AndroidToolchain.cmake  CarrierDefaults.cmake  ExternalCMakeArgs.cmake
config/: carrier.conf  carrier_config.c  carrier_config.h  check_config.c
docs/: CMakeLists.txt
docs/source/: carrier-api.rst  carrier-error-number.rst  carrier-session-api.rst
src/: CMakeLists.txt
src/carrier/: CMakeLists.txt  big_message.h  carrier.c  carrier.h  carrier_deprecated.h  carrier_error.c  carrier_error.h  carrier_ext.h  carrier_extension.c  carrier_extension.h  carrier_impl.h  carrier_turnserver.c  carrier_turnserver.h  dstore_wrapper.c  ela_carrier.c  ela_carrier.h  ela_carrier_impl.h  ela_error.c  elacp.c  elacp.h  error.c  express.c  express.h  extension.c  extension_apis.h  extensions.h  extensions_helper.h  hashtable_bulkmsgs.h  hashtable_extensions.h  hashtable_friends.h  hashtable_transacted_assembly.h  hashtable_transacted_callbacks.h  hashtable_transacted_history.h  hashtable_unconfirmed_msgs.h  http_client.c  lmsg.c  lmsg.h  managed_group_client.c  managed_group_client.h  managed_group_server.c  (+9 more)
src/carrier/dht/: dht.c  dht.h
src/carrier/dstore/: dstore.c  dstore.h  http_client.c
src/filetransfer/: CMakeLists.txt  carrier_easyfile.h  carrier_filetransfer.h  carrier_filetransfer_deprecated.h  easyfile.c  ela_filetransfer.h  filerequests.h  filetransfer.c  filetransfer.h
src/session/: CMakeLists.txt  carrier_session.h  carrier_session_deprecated.h  channels.h  crypto_handler.c  ela_session.h  flex_buffer.h  ice.c  ice.h  multiplex_handler.c  multiplex_handler.h  portforwarding.c  portforwarding.h  portforwardings.h  reliable_handler.c  services.h  session.c  session.h  stream_handler.h
tests/: CMakeLists.txt  HOWTO.md  README.md  launcher.c  main.c
tests/api/: Makefile  test_helper.c
tests/api/carrier/: friend_invite_assembly_test.c  friend_invite_test.c  friend_message_test.c  group_invite_join_test.c  group_list_test.c  group_message_test.c  group_new_test.c  group_peer_test.c  group_title_test.c
tests/api/filetransfer/: filetransfer_connect_test.c  filetransfer_file_test.c
tests/api/robot/: cmd.c  robot.c
tests/api/session/: session_bundle_test.c  session_channel_test.c  session_portforwarding_test.c  session_request_reply_bundle_test.c  session_request_reply_test.c  session_stream_state_test.c  session_stream_test.c  session_stream_type_test.c  suites.h
tests/apitests/: CMakeLists.txt  config.c  config.h  tests.conf
tests/apitests/api/: test_helper.c  test_helper.h  tests.c
tests/apitests/api/carrier/: check_api_args_test.c  check_id_test.c  friend_invite_assembly_test.c  friend_invite_test.c  friend_label_test.c  friend_message_test.c  friend_message_with_receipt_test.c  friend_offline_message_test.c  friend_offmsg_test.c  friend_offreq_test.c  friend_receipt_message_test.c  friend_request_test.c  get_id_test.c  get_info_test.c  group_invite_join_test.c  group_list_test.c  group_message_test.c  group_new_test.c  group_peer_test.c  group_title_test.c  node_login_test.c
tests/apitests/api/filetransfer/: filetransfer_base_test.c  filetransfer_connect_test.c  filetransfer_file_test.c  filetransfer_id_name_test.c  filetransfer_id_test.c  filetransfer_new_test.c
tests/apitests/api/session/: session_bundle_test.c  session_channel_test.c  session_new_test.c  session_portforwarding_test.c  session_request_reply_test.c  session_stream_state_test.c  session_stream_test.c  session_stream_type_test.c
tests/apitests/include/: cond.h  status_cond.h  test_context.h
tests/apitests/robot/: cmd.c  cmd.h  robot.c  robot.h
tests/include/: test_context.h
tests/offmsg/: CMakeLists.txt  config.c  config.h  main.c
tests/robot/: cmd.c  robot.c
tools/win/: CMakeLists.txt
